--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "webspp_six",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://annupal.github.io/webapp_six/",
+  "private": true, 
+  "homepage": "/webapp_six/#",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
